Fix scripts syntax

--- a/Light.html
+++ b/Light.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8">
         <title>Chess</title>
-        <meta charset="UTF-8">
 		<link rel="stylesheet" href="board.css">
 		
 		<script type="text/javascript">
 			loadDarkState = false;
 		</script>
-		<script src="initializer.js"/></script>
-		<script src="domManipulator.js"/></script>
-		<script src="chessBoardBuilder.js"/></script>
-		<script src="chessGame.js"/></script>
+		<script src="initializer.js"></script>
+		<script src="domManipulator.js"></script>
+		<script src="chessBoardBuilder.js"></script>
+		<script src="chessGame.js"></script>
     </head>
     <body onload="chessGame.showChessBoard();">
 
