--- a/Both.html
+++ b/Both.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8">
         <title>Chess</title>
-        <meta charset="UTF-8">
     </head>
     <body>
 		<iframe title="Light" width="640" height="510" src="Light.html"></iframe>
